--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   "devDependencies": {
     "browser-sync": "^2.23.6",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^4.1.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-csso": "^3.0.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-rigger": "^0.5.8",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "gulp.spritesmith": "^6.9.0"
   },
   "dependencies": {
-    "jquery": "^3.3.1",
-    "normalize-scss": "^7.0.1"
+    "bootstrap-reboot": "^0.1.1",
+    "jquery": "^3.3.1"
   },
   "optionalDependencies": {}
 }
