--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "browser-sync": "^2.23.6",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-cheerio": "^0.6.3",
     "gulp-clean": "^0.4.0",
     "gulp-csso": "^3.0.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-replace": "^0.6.1",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-svg-sprite": "^1.4.0",
+    "gulp-svgmin": "^1.2.4",
     "gulp-tinypng": "^1.0.2",
     "gulp-uglify": "^3.0.0",
     "gulp.spritesmith": "^6.9.0"
