--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "ToT",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^7.0.1",
     "gulp-cheerio": "^0.6.3",
     "gulp-clean": "^0.4.0",
     "gulp-csso": "^3.0.1",
