--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
@@ -31,8 +31,10 @@
     "gulp.spritesmith": "^6.9.0"
   },
   "dependencies": {
-    "bootstrap-reboot": "^0.1.1",
-    "jquery": "^3.3.1"
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
+    "micromodal": "^0.3.2",
+    "svgxuse": "^1.2.6"
   },
   "optionalDependencies": {}
 }
