--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-strip-css-comments": "^2.0.0",
     "gulp-svg-sprite": "^1.4.0",
     "gulp-svgmin": "^1.2.4",
     "gulp-tinypng": "^1.0.2",
@@ -34,6 +35,7 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "micromodal": "^0.3.2",
+    "rfs": "^7.1.3",
     "svgxuse": "^1.2.6"
   },
   "optionalDependencies": {}
