--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 versions", "safari 7"]
-      },
-      "modules": false,
-      "debug": false,
-      "loose": true
-    }]
+    [
+      "@babel/preset-env", {
+        "targets": {
+          "browsers": ["last 2 versions", ">2.5%"]
+        },
+        "modules": false
+      }
+    ]
   ]
 }
