--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "ToT",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "browser-sync": "^2.24.4",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-clean": "^0.4.0",
     "gulp-csso": "^3.0.1",
@@ -34,7 +34,6 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
-    "micromodal": "^0.3.2",
     "rfs": "^7.1.3",
     "svgxuse": "^1.2.6"
   },
