--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
+		"@babel/plugin-transform-runtime": "^7.2.0",
 		"@babel/preset-env": "^7.2.0",
+		"@babel/runtime": "^7.2.0",
 		"babelify": "^10.0.0",
 		"browser-sync": "^2.26.3",
 		"browserify": "^16.2.3",
