--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,23 @@
 {
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    ["module-resolver", {
+      "root": ["./"],
+      "alias": {
+        "modules": "./node_modules",
+      }
+    }]
+  ],
   "presets": [
     [
       "@babel/preset-env",
       {
         "useBuiltIns": "entry",
+        "modules" : "commonjs",
         "targets": {
           "browsers": ["last 2 versions", "safari 7"]
         }
       }
     ]
-  ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  ]  
 }
