--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@babel/plugin-transform-runtime": "^7.2.0",
 		"@babel/preset-env": "^7.2.0",
 		"@babel/runtime": "^7.2.0",
+		"babel-plugin-module-resolver": "^3.1.3",
 		"babelify": "^10.0.0",
 		"browser-sync": "^2.26.3",
 		"browserify": "^16.2.3",
