--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
-		"@babel/plugin-transform-runtime": "^7.2.0",
+		"@babel/polyfill": "^7.4.0",
 		"@babel/preset-env": "^7.2.0",
-		"@babel/runtime": "^7.2.0",
 		"babel-plugin-module-resolver": "^3.1.3",
 		"babelify": "^10.0.0",
 		"browser-sync": "^2.26.3",
@@ -53,6 +52,7 @@
 		"IE 10"
 	],
 	"dependencies": {
+		"axios": "^0.18.0",
 		"bootstrap": "^4.1.3",
 		"jquery": "^3.3.1",
 		"rfs": "^7.1.9",
