--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@babel/core": "^7.2.2",
-		"@babel/polyfill": "^7.4.0",
+		"@babel/plugin-transform-runtime": "^7.4.3",
 		"@babel/preset-env": "^7.2.0",
+		"@babel/runtime": "^7.4.3",
+		"babel-loader": "^8.0.5",
 		"babel-plugin-module-resolver": "^3.1.3",
-		"babelify": "^10.0.0",
 		"browser-sync": "^2.26.3",
-		"browserify": "^16.2.3",
 		"del": "^3.0.0",
 		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^6.0.0",
@@ -33,7 +33,6 @@
 		"gulp-replace": "^1.0.0",
 		"gulp-sass": "^4.0.2",
 		"gulp-sourcemaps": "^2.6.4",
-		"gulp-strip-comments": "^2.5.2",
 		"gulp-strip-css-comments": "^2.0.0",
 		"gulp-style-aliases": "^1.1.11",
 		"gulp-svg-sprite": "^1.5.0",
@@ -42,17 +41,12 @@
 		"imagemin-jpeg-recompress": "^6.0.0",
 		"imagemin-pngquant": "^6.0.0",
 		"node-sass": "^4.11.0",
-		"vinyl-buffer": "^1.0.1",
-		"vinyl-source-stream": "^2.0.0",
-		"watchify": "^3.11.1"
+		"uglifyjs-webpack-plugin": "^2.1.2",
+		"webpack": "^4.29.6",
+		"webpack-merge": "^4.2.1",
+		"webpack-stream": "^5.2.1"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"IE 10"
-	],
 	"dependencies": {
-		"axios": "^0.18.0",
 		"bootstrap": "^4.1.3",
 		"jquery": "^3.3.1",
 		"rfs": "^7.1.9",
