--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"@babel/runtime": "^7.4.3",
 		"babel-loader": "^8.0.5",
 		"babel-plugin-module-resolver": "^3.1.3",
-		"browser-sync": "^2.26.3",
+		"browser-sync": "^2.26.5",
+		"cache-loader": "^3.0.1",
 		"del": "^3.0.0",
 		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^6.0.0",
@@ -38,9 +39,11 @@
 		"gulp-svg-sprite": "^1.5.0",
 		"gulp-svgmin": "^2.1.0",
 		"gulp-uglify": "^3.0.1",
+		"hard-source-webpack-plugin": "^0.13.1",
 		"imagemin-jpeg-recompress": "^6.0.0",
 		"imagemin-pngquant": "^6.0.0",
-		"node-sass": "^4.11.0",
+		"node-sass": "^4.12.0",
+		"terser-webpack-plugin": "^1.2.3",
 		"uglifyjs-webpack-plugin": "^2.1.2",
 		"webpack": "^4.29.6",
 		"webpack-merge": "^4.2.1",
@@ -48,7 +51,7 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.1.3",
-		"jquery": "^3.3.1",
+		"jquery": "^3.4.1",
 		"rfs": "^7.1.9",
 		"svgxuse": "^1.2.6"
 	}
