--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
 		"del": "^3.0.0",
 		"gulp": "^4.0.0",
 		"gulp-autoprefixer": "^6.0.0",
-		"gulp-beautify-code": "^2.0.3",
 		"gulp-cache": "^1.0.2",
 		"gulp-cheerio": "^0.6.3",
-		"gulp-file-include": "^2.0.1",
 		"gulp-imagemin": "^5.0.3",
+		"gulp-pug": "^4.0.1",
 		"gulp-replace": "^1.0.0",
 		"gulp-sass": "^4.0.2",
 		"gulp-sourcemaps": "^2.6.4",
