--- a/package.json
+++ b/package.json
@@ -41,16 +41,15 @@
 		"hard-source-webpack-plugin": "^0.13.1",
 		"imagemin-jpeg-recompress": "^6.0.0",
 		"imagemin-pngquant": "^6.0.0",
-		"node-sass": "^4.12.0",
+		"node-sass": "^4.13.1",
 		"terser-webpack-plugin": "^1.2.3",
-		"uglifyjs-webpack-plugin": "^2.1.2",
 		"webpack": "^4.29.6",
 		"webpack-merge": "^4.2.1",
 		"webpack-stream": "^5.2.1"
 	},
 	"dependencies": {
 		"bootstrap": "^4.1.3",
-		"jquery": "^3.4.1",
+		"gsap": "^3.1.1",
 		"rfs": "^7.1.9",
 		"svgxuse": "^1.2.6"
 	}
