--- a/package.json
+++ b/package.json
@@ -15,41 +15,42 @@
 	"author": "Dmitry K.",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "^7.2.2",
-		"@babel/plugin-transform-runtime": "^7.4.3",
-		"@babel/preset-env": "^7.2.0",
-		"@babel/runtime": "^7.4.3",
-		"babel-loader": "^8.0.5",
+		"@babel/core": "^7.10.4",
+		"@babel/plugin-transform-runtime": "^7.10.4",
+		"@babel/preset-env": "^7.10.4",
+		"@babel/runtime": "^7.10.4",
+		"babel-loader": "^8.1.0",
 		"babel-plugin-module-resolver": "^3.1.3",
 		"browser-sync": "^2.26.7",
 		"cache-loader": "^3.0.1",
 		"del": "^3.0.0",
-		"gulp": "^4.0.0",
-		"gulp-autoprefixer": "^6.0.0",
-		"gulp-cache": "^1.0.2",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^6.1.0",
+		"gulp-cache": "^1.1.3",
 		"gulp-cheerio": "^0.6.3",
 		"gulp-imagemin": "^5.0.3",
 		"gulp-pug": "^4.0.1",
 		"gulp-replace": "^1.0.0",
-		"gulp-sass": "^4.0.2",
+		"gulp-sass": "^4.1.0",
 		"gulp-sourcemaps": "^2.6.4",
 		"gulp-strip-css-comments": "^2.0.0",
 		"gulp-style-aliases": "^1.1.11",
 		"gulp-svg-sprite": "^1.5.0",
-		"gulp-svgmin": "^2.1.0",
+		"gulp-svgmin": "^2.2.0",
 		"gulp-uglify": "^3.0.1",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"imagemin-jpeg-recompress": "^6.0.0",
 		"imagemin-pngquant": "^6.0.0",
-		"node-sass": "^4.13.1",
+		"node-sass": "^4.14.1",
 		"terser-webpack-plugin": "^1.2.3",
 		"webpack": "^4.29.6",
-		"webpack-merge": "^4.2.1",
+		"webpack-merge": "^4.2.2",
 		"webpack-stream": "^5.2.1"
 	},
 	"dependencies": {
-		"bootstrap": "^4.1.3",
-		"gsap": "^3.1.1",
+		"bootstrap": "^4.5.0",
+		"dom-helpers": "^5.1.4",
+		"gsap": "^3.3.4",
 		"rfs": "^7.1.9",
 		"svgxuse": "^1.2.6"
 	}
