modified assistant helper-class

--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,7 @@
       "@babel/preset-env",
       {
         "useBuiltIns": "entry",
+        "corejs": "3",
         "modules" : "commonjs",
         "debug": false
       }
