--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
 		"@babel/runtime": "^7.10.4",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-module-resolver": "^3.1.3",
-		"browser-sync": "^2.26.7",
+		"browser-sync": "^2.26.10",
 		"cache-loader": "^3.0.1",
+		"core-js": "^3.6.5",
 		"del": "^3.0.0",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^6.1.0",
@@ -49,7 +50,6 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.5.0",
-		"dom-helpers": "^5.1.4",
 		"gsap": "^3.3.4",
 		"rfs": "^7.1.9",
 		"svgxuse": "^1.2.6"
