--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cache": "^1.1.3",
     "gulp-cheerio": "^0.6.3",
+    "gulp-debug": "^4.0.0",
+    "gulp-dependents": "^1.2.5",
     "gulp-imagemin": "^5.0.3",
     "gulp-pug": "^4.0.1",
     "gulp-replace": "^1.0.0",
