--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp4template",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Gulp4 template for front-end development",
   "main": "index.js",
   "repository": {
@@ -10,45 +10,50 @@
   "keywords": [
     "ES6 Modules",
     "Sass",
-    "SVG"
+    "SVG",
+    "Pug",
+    "Gulp",
+    "Webpack"
   ],
   "author": "Dmitry K.",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/runtime": "^7.15.4",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^3.1.3",
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.5",
     "cache-loader": "^3.0.1",
-    "core-js": "^3.8.3",
+    "core-js": "^3.17.2",
     "del": "^3.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cache": "^1.1.3",
     "gulp-debug": "^4.0.0",
     "gulp-dependents": "^1.2.5",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.1.0",
+    "gulp-image": "^6.2.1",
+    "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-css-comments": "^2.0.0",
     "gulp-svgmin": "^2.2.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.1",
-    "imagemin-jpeg-recompress": "^6.0.0",
-    "imagemin-pngquant": "^6.0.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "terser-webpack-plugin": "^1.2.3",
-    "webpack": "^5.16.0",
+    "webpack": "^5.52.0",
     "webpack-merge": "^4.2.2",
-    "webpack-stream": "^5.2.1"
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "@popperjs/core": "^2.10.1",
+    "@yaireo/validator": "^3.4.0",
+    "bootstrap": "^5.1.0",
+    "deepmerge": "^4.2.2",
     "is_js": "^0.9.0",
-    "svgxuse": "^1.2.6"
+    "svgxuse": "^1.2.6",
+    "vanilla-lazyload": "^17.4.0"
   }
 }
